fix primitives imports, and set default backend in tensorly

--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "from flex.pool import FlexPool\n",
-    "from flex.pool.primitives import init_server_model_tf\n",
+    "from flex.pool import init_server_model_tf\n",
     "\n",
     "# Defining the model\n",
     "def get_model():\n",
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import deploy_server_model_tf\n",
+    "from flex.pool import deploy_server_model_tf\n",
     "\n",
     "server.map(deploy_server_model_tf, selected_clients)"
    ]
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import train_tf\n",
+    "from flex.pool import train_tf\n",
     "\n",
     "selected_clients.map(train_tf, batch_size=512, epochs=1, verbose=False)"
    ]
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import collect_clients_weights_tf\n",
+    "from flex.pool import collect_clients_weights_tf\n",
     "\n",
     "aggregator = flex_pool.aggregators\n",
     "aggregator.map(collect_clients_weights_tf, selected_clients)"
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import set_aggregated_weights_tf\n",
+    "from flex.pool import set_aggregated_weights_tf\n",
     "\n",
     "aggregator.map(set_aggregated_weights_tf, server)"
    ]
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import deploy_server_model_tf\n",
+    "from flex.pool import deploy_server_model_tf\n",
     "\n",
     "server.map(deploy_server_model_tf, selected_clients)"
    ]
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import evaluate_server_model_tf\n",
+    "from flex.pool import evaluate_server_model_tf\n",
     "\n",
     "test_examples, test_labels = test_data.to_numpy()\n",
     "metrics = server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
