--- a/notebooks/Two ways of updating weights with FLEXible.ipynb
+++ b/notebooks/Two ways of updating weights with FLEXible.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import deploy_server_model_pt\n",
+    "from flex.pool.primitives_pt import deploy_server_model_pt\n",
     "\n",
     "servers.map(deploy_server_model_pt, selected_clients)"
    ]
