--- a/notebooks/flex_text_classification_huggingface_using_trainer_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_trainer_demo.ipynb
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import collect_clients_weights_pt, set_aggregated_weights_pt"
+    "from flex.pool.primitives_pt import collect_clients_weights_pt, set_aggregated_weights_pt"
    ]
   },
   {
