--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -99,12 +99,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import init_server_model_tf\n",
-    "from flex.pool.primitives import deploy_server_model_tf\n",
-    "from flex.pool.primitives import collect_clients_weights_tf\n",
-    "from flex.pool.primitives import train_tf\n",
-    "from flex.pool.primitives import set_aggregated_weights_tf\n",
-    "from flex.pool.primitives import evaluate_server_model_tf\n",
+    "from flex.pool.primitives_tf import init_server_model_tf\n",
+    "from flex.pool.primitives_tf import deploy_server_model_tf\n",
+    "from flex.pool.primitives_tf import collect_clients_weights_tf\n",
+    "from flex.pool.primitives_tf import train_tf\n",
+    "from flex.pool.primitives_tf import set_aggregated_weights_tf\n",
+    "from flex.pool.primitives_tf import evaluate_server_model_tf\n",
     "from flex.pool.aggregators import fed_avg"
    ]
   },
