--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -73,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import deploy_server_model_tf\n",
-    "from flex.pool.primitives import evaluate_server_model_tf\n",
+    "from flex.pool.primitives_tf import deploy_server_model_tf\n",
+    "from flex.pool.primitives_tf import evaluate_server_model_tf\n",
     "\n",
     "from flex.pool.decorators import init_server_model\n",
     "from flex.pool.decorators import collect_clients_weights\n",
