ensure every actor model is on the same device

--- a/notebooks/Two ways of updating weights with FLEXible.ipynb
+++ b/notebooks/Two ways of updating weights with FLEXible.ipynb
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mps'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "device = (\n",
@@ -40,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[sultan]: md5 -q ./emnist-digits.mat;\n",
+      "[sultan]: md5 -q ./emnist-digits.mat;\n"
+     ]
+    }
+   ],
    "source": [
     "from flex.datasets import load\n",
     "from torchvision import transforms\n",
@@ -65,9 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes in the pool 3580: 1 server plus 3579 clients. The server is also an aggregator\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -94,7 +122,7 @@
     "def build_server_model():\n",
     "    server_flex_model = FlexModel()\n",
     "\n",
-    "    server_flex_model[\"model\"] = SimpleNet()\n",
+    "    server_flex_model[\"model\"] = SimpleNet().to(device) # Ensure all models are on the same device\n",
     "    # Required to store this for later stages of the FL training process\n",
     "    server_flex_model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
     "    server_flex_model[\"optimizer_func\"] = torch.optim.Adam\n",
@@ -121,9 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server node is indentified by key \"server\"\n",
+      "Selected 2 client nodes of a total of 3579\n"
+     ]
+    }
+   ],
    "source": [
     "#Select clients\n",
     "clients_per_round=2\n",
@@ -144,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 25.72it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 51.96it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "selected_clients.map(train)"
    ]
@@ -216,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,9 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2.1045245008104168, 0.136775)\n"
+     ]
+    }
+   ],
    "source": [
     "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
     "print(metrics[0])"
@@ -322,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,11 +388,10 @@
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
     "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
-    "    model = client_flex_model[\"model\"]\n",
+    "    model = client_flex_model[\"model\"].to(device)\n",
     "    client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
     "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
     "    model = model.train()\n",
-    "    model = model.to(device)\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
     "    epochs = 5\n",
     "    for _ in tqdm(range(epochs)):\n",
@@ -353,9 +406,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 206.84it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 119.28it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "selected_clients.map(train)"
    ]
@@ -370,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,9 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1.590213431674204, 0.5245)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
@@ -448,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,12 +555,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Running round: 1 of 20\n",
+      "Selected clients for this round: 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 70.16it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 100.72it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 69.83it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 70.23it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 69.60it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 73.30it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 110.71it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 108.74it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 74.80it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 57.01it/s]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Expected all tensors to be on the same device, but found at least two devices, mps:0 and cpu!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/Users/teddy/Documents/FLEX-framework/notebooks/Two ways of updating weights with FLEXible.ipynb Celda 36\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bworkstation2012.duckdns.org/Users/teddy/Documents/FLEX-framework/notebooks/Two%20ways%20of%20updating%20weights%20with%20FLEXible.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m train_n_rounds(\u001b[39m20\u001b[39;49m, clients_per_round\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m)\n",
+      "\u001b[1;32m/Users/teddy/Documents/FLEX-framework/notebooks/Two ways of updating weights with FLEXible.ipynb Celda 36\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bworkstation2012.duckdns.org/Users/teddy/Documents/FLEX-framework/notebooks/Two%20ways%20of%20updating%20weights%20with%20FLEXible.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m pool\u001b[39m.\u001b[39maggregators\u001b[39m.\u001b[39mmap(fed_avg)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bworkstation2012.duckdns.org/Users/teddy/Documents/FLEX-framework/notebooks/Two%20ways%20of%20updating%20weights%20with%20FLEXible.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# The aggregator send its aggregated weights to the server\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bworkstation2012.duckdns.org/Users/teddy/Documents/FLEX-framework/notebooks/Two%20ways%20of%20updating%20weights%20with%20FLEXible.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=22'>23</a>\u001b[0m pool\u001b[39m.\u001b[39;49maggregators\u001b[39m.\u001b[39;49mmap(set_aggregated_diff_weights_pt, pool\u001b[39m.\u001b[39;49mservers)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bworkstation2012.duckdns.org/Users/teddy/Documents/FLEX-framework/notebooks/Two%20ways%20of%20updating%20weights%20with%20FLEXible.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39m# Optional: evaluate the server model\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bworkstation2012.duckdns.org/Users/teddy/Documents/FLEX-framework/notebooks/Two%20ways%20of%20updating%20weights%20with%20FLEXible.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m metrics \u001b[39m=\u001b[39m pool\u001b[39m.\u001b[39mservers\u001b[39m.\u001b[39mmap(evaluate_global_model, test_data\u001b[39m=\u001b[39mtest_data)\n",
+      "File \u001b[0;32m~/Documents/FLEX-framework/flex/pool/pool.py:120\u001b[0m, in \u001b[0;36mFlexPool.map\u001b[0;34m(self, func, dst_pool, **kwargs)\u001b[0m\n\u001b[1;32m    115\u001b[0m     res \u001b[39m=\u001b[39m [\n\u001b[1;32m    116\u001b[0m         func(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_models\u001b[39m.\u001b[39mget(i), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data\u001b[39m.\u001b[39mget(i), \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    117\u001b[0m         \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_actors\n\u001b[1;32m    118\u001b[0m     ]\n\u001b[1;32m    119\u001b[0m \u001b[39melif\u001b[39;00m FlexPool\u001b[39m.\u001b[39mcheck_compatibility(\u001b[39mself\u001b[39m, dst_pool):\n\u001b[0;32m--> 120\u001b[0m     res \u001b[39m=\u001b[39m [\n\u001b[1;32m    121\u001b[0m         func(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_models\u001b[39m.\u001b[39mget(i), dst_pool\u001b[39m.\u001b[39m_models, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    122\u001b[0m         \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_actors\n\u001b[1;32m    123\u001b[0m     ]\n\u001b[1;32m    124\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    125\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    126\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mSource and destination pools are not allowed to comunicate, ensure that their actors can communicate.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    127\u001b[0m     )\n",
+      "File \u001b[0;32m~/Documents/FLEX-framework/flex/pool/pool.py:121\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    115\u001b[0m     res \u001b[39m=\u001b[39m [\n\u001b[1;32m    116\u001b[0m         func(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_models\u001b[39m.\u001b[39mget(i), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data\u001b[39m.\u001b[39mget(i), \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    117\u001b[0m         \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_actors\n\u001b[1;32m    118\u001b[0m     ]\n\u001b[1;32m    119\u001b[0m \u001b[39melif\u001b[39;00m FlexPool\u001b[39m.\u001b[39mcheck_compatibility(\u001b[39mself\u001b[39m, dst_pool):\n\u001b[1;32m    120\u001b[0m     res \u001b[39m=\u001b[39m [\n\u001b[0;32m--> 121\u001b[0m         func(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_models\u001b[39m.\u001b[39;49mget(i), dst_pool\u001b[39m.\u001b[39;49m_models, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    122\u001b[0m         \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_actors\n\u001b[1;32m    123\u001b[0m     ]\n\u001b[1;32m    124\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    125\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    126\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mSource and destination pools are not allowed to comunicate, ensure that their actors can communicate.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    127\u001b[0m     )\n",
+      "File \u001b[0;32m~/Documents/FLEX-framework/flex/pool/decorators.py:92\u001b[0m, in \u001b[0;36mset_aggregated_weights.<locals>._deploy_aggregated_weights_\u001b[0;34m(aggregator_flex_model, servers_flex_models, *args, **kwargs)\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m     85\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_deploy_aggregated_weights_\u001b[39m(\n\u001b[1;32m     86\u001b[0m     aggregator_flex_model: FlexModel,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[1;32m     90\u001b[0m ):\n\u001b[1;32m     91\u001b[0m     \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m servers_flex_models:\n\u001b[0;32m---> 92\u001b[0m         func(\n\u001b[1;32m     93\u001b[0m             servers_flex_models[k],\n\u001b[1;32m     94\u001b[0m             aggregator_flex_model[\u001b[39m\"\u001b[39;49m\u001b[39maggregated_weights\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m     95\u001b[0m             \u001b[39m*\u001b[39;49margs,\n\u001b[1;32m     96\u001b[0m             \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs,\n\u001b[1;32m     97\u001b[0m         )\n",
+      "File \u001b[0;32m~/Documents/FLEX-framework/flex/pool/primitives_pt.py:225\u001b[0m, in \u001b[0;36mset_aggregated_diff_weights_pt\u001b[0;34m(server_flex_model, aggregated_diff_weights, *args, **kwargs)\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    224\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(new) \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# Do not copy empty layers\u001b[39;00m\n\u001b[0;32m--> 225\u001b[0m         weight_dict[layer_key]\u001b[39m.\u001b[39;49madd_(new)\n\u001b[1;32m    226\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:  \u001b[39m# new has no len property\u001b[39;00m\n\u001b[1;32m    227\u001b[0m     weight_dict[layer_key]\u001b[39m.\u001b[39madd_(new)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, mps:0 and cpu!"
+     ]
+    }
+   ],
    "source": [
     "train_n_rounds(20, clients_per_round=10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -509,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
