replace classes with labels and client with node everywhere, also replace client_names with node_ids

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -45,7 +45,7 @@
     "train_iris = Dataset.from_numpy(X_train, y_train)\n",
     "test_iris = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
-    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
+    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_nodes=5)"
    ]
   },
   {
@@ -177,24 +177,24 @@
     "\n",
     "    import numpy as np\n",
     "\n",
-    "    n_clients = len(clients_ids)\n",
-    "    print(f\"Total number of available clients: {n_clients}\")\n",
-    "    n_clients_aggregators = np.random.randint(low=0, high=n_clients//2)\n",
+    "    n_nodes = len(clients_ids)\n",
+    "    print(f\"Total number of available clients: {n_nodes}\")\n",
+    "    n_clients_aggregators = np.random.randint(low=0, high=n_nodes//2)\n",
     "    print(f\"Clients as aggregators: {n_clients_aggregators}\")\n",
-    "    n_clients_servers = np.random.randint(low=0, high=n_clients-n_clients_aggregators)\n",
+    "    n_clients_servers = np.random.randint(low=0, high=n_nodes-n_clients_aggregators)\n",
     "    print(f\"Clients as servers: {n_clients_servers}\")\n",
-    "    rest_clients = n_clients - (n_clients_aggregators + n_clients_servers)\n",
+    "    rest_clients = n_nodes - (n_clients_aggregators + n_clients_servers)\n",
     "    print(f\"Only clients: {rest_clients}\")\n",
     "    actors = FlexActors(\n",
     "        {clients_ids[client_id]: FlexRole.aggregator_client for client_id in range(n_clients_aggregators)}\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({clients_ids[client_id]: FlexRole.server_client for client_id in range(n_clients_aggregators, n_clients-rest_clients)})\n",
+    "        FlexActors({clients_ids[client_id]: FlexRole.server_client for client_id in range(n_clients_aggregators, n_nodes-rest_clients)})\n",
     "    )\n",
     "\n",
     "    actors.update(\n",
-    "        FlexActors({clients_ids[client_id]: FlexRole.client for client_id in range(n_clients_aggregators+n_clients_servers, n_clients)})\n",
+    "        FlexActors({clients_ids[client_id]: FlexRole.client for client_id in range(n_clients_aggregators+n_clients_servers, n_nodes)})\n",
     "    )\n",
     "\n",
     "    if n_clients_servers == 0:\n",
