--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.replacement = False\n",
-    "config.n_clients = 100\n",
+    "config.n_nodes = 100\n",
     "\n",
     "flex_dataset = FedDataDistribution.from_config(\n",
     "                        centralized_data=Dataset.from_torchvision_dataset(train_data), \n",
