--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -59,41 +59,41 @@
     "To federate a centralized dataset, it is required to describe the federation process in a `FedDatasetConfig` object.\n",
     "\n",
     "A `FedDatasetConfig` object has the following fields:\n",
-    "| Options compatibility   | **n_clients** | **client_names** | **weights** | **weights_per_class** | **replacement** | **classes_per_client** | **features_per_client** | **indexes_per_client** | **group_by_label_index** |\n",
+    "| Options compatibility   | **n_nodes** | **node_ids** | **weights** | **weights_per_label** | **replacement** | **labels_per_node** | **features_per_node** | **indexes_per_node** | **group_by_label_index** |\n",
     "|-------------------------|---------------|------------------|-------------|-----------------------|-----------------|------------------------|-------------------------|------------------------|----------------------|\n",
-    "| **n_clients**           | -             | Y                | Y           | Y                     | Y               | Y                      | Y                       | N                      | N                    |\n",
-    "| **client_names**        | -             | -                | Y           | Y                     | Y               | Y                      | Y                       | Y                      | N                    |\n",
+    "| **n_nodes**           | -             | Y                | Y           | Y                     | Y               | Y                      | Y                       | N                      | N                    |\n",
+    "| **node_ids**        | -             | -                | Y           | Y                     | Y               | Y                      | Y                       | Y                      | N                    |\n",
     "| **weights**             | -             | -                | -           | N                     | Y               | Y                      | Y                       | N                      | N                    |\n",
-    "| **weights_per_class**   | -             | -                | -           | -                     | Y               | N                      | N                       | N                      | N                    |\n",
+    "| **weights_per_label**   | -             | -                | -           | -                     | Y               | N                      | N                       | N                      | N                    |\n",
     "| **replacement**         | -             | -                | -           | -                     | -               | Y                      | N                       | N                      | N                    |\n",
-    "| **classes_per_client**  | -             | -                | -           | -                     | -               | -                      | N                       | N                      | N                    |\n",
-    "| **features_per_client** | -             | -                | -           | -                     | -               | -                      | -                       | N                      | N                    |\n",
-    "| **indexes_per_client**  | -             | -                | -           | -                     | -               | -                      | -                       | -                      | N                    |\n",
+    "| **labels_per_node**  | -             | -                | -           | -                     | -               | -                      | N                       | N                      | N                    |\n",
+    "| **features_per_node** | -             | -                | -           | -                     | -               | -                      | -                       | N                      | N                    |\n",
+    "| **indexes_per_node**  | -             | -                | -           | -                     | -               | -                      | -                       | -                      | N                    |\n",
     "| **group_by_label_index**    | -             | -                | -           | -                     | -               | -                      | -                       | -                      | -                    |\n",
     "\n",
     "- seed: Optional[int]\n",
     "        Seed used to make the federated dataset generated reproducible with this configuration. Default None.\n",
-    "- n_clients: int\n",
+    "- n_nodes: int\n",
     "        Number of clients among which to split the centralized dataset. Default 2.\n",
-    "- client_names: Optional[List[Hashable]]\n",
-    "        Names to identifty each client, if not provided clients will be indexed using integers. If n_clients is also \\\n",
-    "        given, we consider up to n_clients elements. Default None.\n",
+    "- node_ids: Optional[List[Hashable]]\n",
+    "        Names to identifty each client, if not provided clients will be indexed using integers. If n_nodes is also \\\n",
+    "        given, we consider up to n_nodes elements. Default None.\n",
     "- weights: Optional[npt.NDArray]\n",
     "        A numpy.array which provides the proportion of data to give to each client. Default None.\n",
-    "- weights_per_class: Optional[npt.NDArray]\n",
+    "- weights_per_label: Optional[npt.NDArray]\n",
     "        A numpy.array which provides the proportion of data to give to each client and class of the dataset to federate. \\\n",
     "        We expect a bidimensional array of shape (n, m) where \"n\" is the number of clients and \"m\" is the number of classes of \\\n",
     "        the dataset to federate. Default None.\n",
     "- replacement: bool\n",
     "        Whether the samping procedure used to split a centralized dataset is with replacement or not. Default False\n",
-    "- classes_per_client: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
+    "- labels_per_node: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
     "        Classes to assign to each client, if provided as an int, it is the number classes per client, if provided as a \\\n",
     "        tuple of ints, it establishes a mininum and a maximum of number of classes per client, a random number sampled \\\n",
     "        in such interval decides the number of classes of each client. If provided as a list of lists, it establishes the classes \\\n",
     "        assigned to each client. Default None.\n",
-    "- features_per_client: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
-    "        Features to assign to each client, it share the same interface as classes_per_client. Default None.\n",
-    "- indexes_per_client: Optional[npt.NDArray]\n",
+    "- features_per_node: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
+    "        Features to assign to each client, it share the same interface as labels_per_node. Default None.\n",
+    "- indexes_per_node: Optional[npt.NDArray]\n",
     "        Data indexes to assign to each client. Default None.\n",
     "- group_by_label_index: Optional[int]\n",
     "        Index which indicates which feature unique values will be used to generate federated clients. Default None.\n"
@@ -119,10 +119,10 @@
     "import numpy as np\n",
     "\n",
     "config = FedDatasetConfig(seed = 0) # We fix a seed to make our federation reproducible\n",
-    "config.n_clients = 10 # 10 clients\n",
+    "config.n_nodes = 10 # 10 clients\n",
     "config.replacement = False # ensure that clients do not share any data\n",
-    "config.classes_per_client = [[i] for i in np.unique(train_dataset.y_data)] # assign each client one class\n",
-    "config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class"
+    "config.labels_per_node = [[i] for i in np.unique(train_dataset.y_data)] # assign each client one class\n",
+    "config.weights = [0.2] * config.n_nodes # each client has only 20% of its assigned class"
    ]
   },
   {
@@ -199,9 +199,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "n_clients = 500\n",
+    "n_nodes = 500\n",
     "mu, sigma = 100, 1  # mean and standard deviation\n",
-    "normal_weights = np.random.default_rng(seed=0).normal(mu, sigma, n_clients)  # sample random numbers\n",
+    "normal_weights = np.random.default_rng(seed=0).normal(mu, sigma, n_nodes)  # sample random numbers\n",
     "normal_weights = np.clip(normal_weights, a_min=0, a_max=np.inf)  # remove negative values\n",
     "normal_weights = normal_weights / sum(normal_weights) # normalize to sum 1\n",
     "\n",
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "config = FedDatasetConfig(seed=0, \n",
-    "                            n_clients=n_clients,\n",
+    "                            n_nodes=n_nodes,\n",
     "                            replacement=False,\n",
     "                            weights=normal_weights\n",
     "                        )\n",
@@ -310,13 +310,13 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.replacement = True # it is not clear whether clients share their data or not\n",
-    "config.n_clients = 10\n",
+    "config.n_nodes = 10\n",
     "num_classes = 10\n",
     "\n",
     "# Assign a sample proportion for each client-class pair\n",
-    "alphas = np.random.uniform(0.4, 0.6, [config.n_clients, num_classes])\n",
+    "alphas = np.random.uniform(0.4, 0.6, [config.n_nodes, num_classes])\n",
     "alphas = alphas / np.sum(alphas, axis=0)\n",
-    "config.weights_per_class = alphas"
+    "config.weights_per_label = alphas"
    ]
   },
   {
@@ -356,14 +356,14 @@
    "source": [
     "unique_classes = np.sort(np.unique(cifar10_dataset.y_data))\n",
     "\n",
-    "for i in range(config.n_clients):\n",
-    "    client_key = i # Autogenerated keys are created as numbers 0...n_clients\n",
+    "for i in range(config.n_nodes):\n",
+    "    client_key = i # Autogenerated keys are created as numbers 0...n_nodes\n",
     "    for j, cifar_class in enumerate(unique_classes):\n",
     "        indexes = personalized_cifar_dataset[client_key].y_data.to_numpy() == cifar_class\n",
     "        number_of_elements_per_class = sum(indexes)\n",
     "        if number_of_elements_per_class != 0:\n",
     "            total_elements_per_class = np.sum(cifar10_dataset.y_data.to_numpy() == cifar_class)\n",
-    "            print(f\"client id: {client_key}, class {cifar_class}: actual proportion\", number_of_elements_per_class/total_elements_per_class, \"vs. expected proportion:\", config.weights_per_class[i][j])"
+    "            print(f\"client id: {client_key}, class {cifar_class}: actual proportion\", number_of_elements_per_class/total_elements_per_class, \"vs. expected proportion:\", config.weights_per_label[i][j])"
    ]
   },
   {
@@ -479,7 +479,7 @@
     "# Create a config and federate the dataset\n",
     "config_hf = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
@@ -556,7 +556,7 @@
     "\n",
     "config_tf = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
@@ -641,7 +641,7 @@
     "\n",
     "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
@@ -719,7 +719,7 @@
     "# We will use the same configuration than in the HuggingFace example\n",
     "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
