--- a/notebooks/OUTDATED_flex_text_generation_torch_demo.ipynb
+++ b/notebooks/OUTDATED_flex_text_generation_torch_demo.ipynb
@@ -231,10 +231,10 @@
    "source": [
     "centralized_data = Dataset(X)\n",
     "config = FedDatasetConfig(seed=0)\n",
-    "config.n_clients = 2\n",
+    "config.n_nodes = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
-    "config.client_names = ['client1', 'client2']\n",
-    "# config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class\n",
+    "config.node_ids = ['client1', 'client2']\n",
+    "# config.weights = [0.2] * config.n_nodes # each client has only 20% of its assigned class\n",
     "config.weights = None\n",
     "fld = FedDataDistribution.from_config(centralized_data=centralized_data, config=config)\n",
     "#fld = FedDataDistribution.iid_distribution(centralized_data=centralized_data)"
