--- a/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
@@ -107,9 +107,9 @@
     "from flex.data import FedDatasetConfig, FedDataDistribution\n",
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
-    "config.n_clients = 2\n",
+    "config.n_nodes = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
-    "config.client_names = ['client1', 'client2'] # Optional\n",
+    "config.node_ids = ['client1', 'client2'] # Optional\n",
     "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns=['text'], label_columns=['label'])"
    ]
   },
