--- a/notebooks/Federate datasets from other libraries with FLEXible.ipynb
+++ b/notebooks/Federate datasets from other libraries with FLEXible.ipynb
@@ -67,7 +67,7 @@
     "# Create a config and federate the dataset\n",
     "config_hf = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
@@ -143,7 +143,7 @@
     "\n",
     "config_tf = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
@@ -228,7 +228,7 @@
     "\n",
     "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
@@ -310,7 +310,7 @@
     "# We will use the same configuration than in the HuggingFace example\n",
     "config_torch = FedDatasetConfig(\n",
     "    seed=0,\n",
-    "    n_clients=2,\n",
+    "    n_nodes=2,\n",
     "    replacement=False\n",
     ")\n",
     "\n",
